grammar.js
		caddyfile: $ =>
			seq(
				repeat($._eol),
				optional(seq($.global_options, repeat($._eol))),
				optional(choice($.single_site, $.multi_site)),
			),

		single_site: $ => seq($._site, repeat1($._eol), optional($._block_body)),

		multi_site: $ =>
			seq(
				$._root_expression,
				repeat(seq(repeat1($._eol), $._root_expression)),
				repeat1($._eol),
			),
		_root_expression: $ => choice($.definition, $.import_statement),

		global_options: $ => $._block,
		site_definition: $ => seq($._site, $.block),

		_site: $ => choice($._site_field, $._site_list),

		_bare_identifier: $ => alias($._ext_str_bare, $.identifier),

		integer: $ => $._ext_str_num,

		substitution: $ => seq($._sym_brace_o, optional($.reference), $._sym_brace_c),
		identifier: $ => choice($.templated_identifier, $._ext_str_bare),

		literal_string: $ => $._ext_str_bare,

		templated_string: $ => prec.right(seq(repeat1($._tmpl_string_fragment))),

		_tmpl_string_fragment: $ => field('fragment', choice($._nested_string, $.substitution)),
		_operand: $ => field('operand', $.identifier),
		index_expression: $ =>
			prec.right(
				seq(
					optional($._operand),
					$._sym_bracket_o,
					optional(field('index', $.integer)),
					$._sym_bracket_c,
				),
			),

		namespace_expression: $ =>
			seq(
				optional(field('module', $._bare_identifier)),
				repeat1(seq($._sym_period, optional(field('member', $._bare_identifier)))),
			),

		generic_placeholder: $ => seq(choice($.identifier, $.namespace_expression)),

		generic_pathname: $ =>
			repeat1(
				choice(
					$._sym_solidus,
					$._sym_bsolidus,
					$._sym_colon,
					field('segment', $.string),
				),
			),

		file_placeholder: $ =>
			seq(
				optional($._sym_period),
				$._keyword_file,
				$._sym_period,
				optional(field('member', $.generic_pathname)),
			),

		environment_variable: $ =>
			prec.right(
				seq($._sym_dollar, optional(choice($._env_var_name, $._env_var_name_default))),
			),

		_env_var_name: $ => field('name', $._bare_identifier),
		_env_var_name_default: $ =>
			seq($._env_var_name, $._sym_colon, optional(field('default', $.argument))),

		ipv6: $ =>
			seq(
				$._sym_bracket_o,
				repeat(choice(field('hextet', $._primitive), $._sym_colon)),
				optional(seq($._sym_percent, optional(field('zone', $.string)))),
				$._sym_bracket_c,
			),
		_fragment: $ => prec.right(seq($._sym_num, optional($.string))),

		_network: $ => seq($.protocol, optional(seq($._sym_plus, $.protocol))),

		network_address: $ =>
			seq(
				field('network', $._network),
				$._sym_solidus,
				field('address', choice($.pathname, $.authority)),
			),

		protocol: $ => $._ext_cls_protocol,

		byte: $ => $._ext_str_hex_byte,
		mac_address: $ =>
			prec.right(
				seq(field('octet', $.byte), repeat1(seq($._sym_colon, field('octet', $.byte)))),
			),

		address: $ =>
			prec.right(
				seq(
					optional(field('scheme', seq($.string, $._sym_scheme))),
					optional(seq(field('user', $.string), $._sym_at)),
					$.authority,
					optional(field('path', $.path)),
					optional(field('query', $.query)),
					optional(field('fragment', $._fragment)),
				),
			),

		authority: $ =>
			prec.right(repeat1(choice(field('host', $.host), field('port', $._port)))),

		_port: $ => prec.right(seq($._sym_colon, optional(choice($.range, $._primitive)))),

		domain_name: $ =>
			prec.right(
				seq(
					field('segment', $.string),
					repeat(choice(field('segment', $.string), $._sym_period)),
				),
			),

		_block: $ =>
			seq($._sym_block_start, repeat1($._eol), optional($._block_body), $._sym_brace_c),

		block: $ => $._block,

		_block_body: $ =>
			seq($._expression, repeat(seq(repeat1($._eol), $._expression)), repeat1($._eol)),

		snippet_declaration: $ =>
			seq($._sym_paren_o, optional(field('name', $._bare_identifier)), $._sym_paren_c),

		snippet_definition: $ => seq($.snippet_declaration, $.block),

		named_route_declaration: $ =>
			seq(
				$._sym_ampersand,
				$._sym_paren_o,
				optional(field('name', $._bare_identifier)),
				$._sym_paren_c,
			),

		named_route_definition: $ => seq($.named_route_declaration, $.block),

		named_matcher_reference: $ => $._matcher_name,

		pathname: $ =>
			seq(choice($.posix_pathname, $.windows_pathname), optional($.permission)),

		posix_absolute_pathname: $ => prec(-1, $._posix_path),

		_posix_path: $ =>
			prec.right(
				seq($._sym_solidus, repeat(choice($._sym_solidus, field('segment', $.string)))),
			),

		path: $ => $._posix_path,

		matcher: $ => prec.right(choice($.wildcard, $.named_matcher_reference, $.path)),
		wildcard: $ => $._sym_asterisk,
		_matcher_name: $ => field('name', alias($._matcher_handle, $.identifier)),

		named_matcher_definition: $ => seq($._matcher_name, optional($._ws), $.request_matcher),

		_matcher_block: $ =>
			seq(
				$._sym_block_start,
				repeat1($._eol),
				repeat(seq($.request_matcher, repeat1($._eol))),
				$._sym_brace_c,
			),

		not_operator: $ => $._key_not,

		request_matcher: $ =>
			prec.right(
				seq(
					optional(field('modifier', $.not_operator)),
					choice(
						$._regexp_matcher,
						$._generic_matcher,
						$._expression_matcher,
						$.embedded_content,
						$.heredoc,
						$.not_operator,
						alias($._matcher_block, $.block),
					),
				),
			),

		_generic_matcher: $ =>
			prec.right(
				seq(
					field('matcher', $.identifier),
					repeat(seq(repeat1($._ws), $._arguments_field)),
					alias(optional($._matcher_block), $.block),
				),
			),

		_expression_matcher: $ =>
			seq(
				field('matcher', $._keyword_expression),
				repeat($._ws),
				field('argument', choice($._implied_cel_expression, $.embedded_content)),
			),

		regular_expression: $ => repeat1($._ext_str_bare),
		_regexp_matcher: $ =>
			seq(
				field('matcher', alias($._ext_cls_regexp, $.identifier)),
				repeat($._ws),
				choice(
					seq(
						field('argument', $.literal_string),
						$._ws,
						field('argument', $.regular_expression),
					),
					field('argument', $.regular_expression),
				),
			),

		directive: $ => field('name', $._bare_identifier),
		conditional_directive: $ => seq($.directive, repeat1($._ws), $._matcher_field),
		statement: $ =>
			prec.left(
				seq(
					choice($.directive, $.conditional_directive),
					repeat(seq(repeat1($._ws), $._arguments_field)),
					optional(seq(repeat1($._ws), $.block)),
				),
			),

		_matcher_field: $ =>
			seq(optional(field('modifier', $.not_operator)), field('matcher', $.matcher)),
		_arguments_field: $ => field('argument', $.argument),
		_primitive: $ => prec.right(choice($.string, $.integer)),

		_amount_decimal: $ => alias($._ext_str_qty_decimal, $.decimal),
		_amount_integer: $ => alias($._ext_str_qty_integer, $.integer),

		duration: $ => $._ext_str_unit_duration,
		amount: $ =>
			seq(
				field('quantity', choice($._amount_integer, $._amount_decimal)),
				field('unit', choice($.size, $.duration)),
			),

		ipv4: $ => $._ext_str_ipv4,
		cidr: $ => seq(choice($.ipv4, $.ipv6), $._sym_solidus, $.integer),
		_modifier: $ =>
			choice(
				$._sym_exclaim,
				$._sym_question,
				$._sym_hyphen,
				$._sym_plus,
				$._sym_chevron_o,
				$._sym_chevron_c,
			),
		unary_expression: $ =>
			seq(field('operator', $._modifier), field('operand', $.literal_string)),

		heredoc: $ => seq($._sym_heredoc, $.heredoc_tag, $.heredoc_content, $.heredoc_suffix),
		_sym_heredoc: $ => alias($._ext_heredoc_operator, '<<'),

		invoke_statement: $ =>
			prec.right(
				seq(
					$._keyword_invoke,
					repeat($._ws),
					optional($._matcher_field),
					field('route', $._bare_identifier),
				),
			),

		import_statement: $ =>
			prec.right(
				seq(
					$._keyword_import,
					repeat($._ws),
					field(
						'pattern',
						prec.right(choice($.pathname, alias($.literal_string, $.identifier))),
					),
					repeat(seq(repeat($._ws), $._arguments_field)),
				),
			),

		quoted_expression: $ =>
			seq($._sym_quote, optional(field('content', $.string)), $._sym_quote),

		embedded_content: $ => seq($._sym_grave, $.cel_expression, $._sym_grave),
		cel_expression: $ => $._ext_str_cel,

		// symbols
		_sym_paren_o: $ => alias($._ext_sym_paren_o, '('),
		_sym_paren_c: $ => alias($._ext_sym_paren_c, ')'),
		_sym_brace_o: $ => alias($._ext_sym_brace_o, '{'),
		_sym_brace_c: $ => alias($._ext_sym_brace_c, '}'),
		_sym_bracket_o: $ => alias($._ext_sym_bracket_o, '['),
		_sym_bracket_c: $ => alias($._ext_sym_bracket_c, ']'),
		_sym_colon: $ => alias($._ext_sym_colon, ':'),
		_sym_solidus: $ => alias($._ext_sym_solidus, '/'),
		_sym_bsolidus: $ => alias($._ext_sym_bsolidus, '\\'),
		_sym_at: $ => alias($._ext_sym_at, '@'),
		_sym_period: $ => alias($._ext_sym_period, '.'),
		_sym_ampersand: $ => alias($._ext_sym_ampersand, '&'),
		_sym_dollar: $ => alias($._ext_sym_dollar, '$'),
		_sym_grave: $ => alias($._ext_sym_grave, '`'),
		_sym_quote: $ => alias($._ext_sym_quote, '"'),
		_sym_asterisk: $ => alias($._ext_sym_asterisk, '*'),
		_sym_percent: $ => alias($._ext_sym_percent, '%'),
		_keyword_import: $ => alias($._key_import, 'import'),
		_keyword_invoke: $ => alias($._key_invoke, 'invoke'),
		_keyword_file: $ => alias($._key_file, 'file'),
		_sym_scheme: $ => alias($._ext_sym_scheme, '://'),

		_ws: $ => $._ext_ws,
		_eol: $ => choice($.comment, $._ext_eol),

		_comment_content: $ => field('content', alias($._ext_str_comment, $.comment)),
		_doc_generic: $ => seq($._sym_at, field('doc', $.identifier)),
		comment: $ =>
			prec.left(
				seq(
					$._ext_sym_comment,
					optional($._doc_generic),
					optional($._comment_content),
					$._ext_eol,
				),
			),
