test/corpus/official.txt
=========
Hostnames
=========

example.com

reverse_proxy example.com
reverse_proxy example.com:8080
reverse_proxy http://example.com
reverse_proxy http://example.com:8080
reverse_proxy https://example.com
reverse_proxy https://example.com:8080

reverse_proxy my.really.dumb.hostname
reverse_proxy https://my.really.dumb.hostname

---

(caddyfile
  (single_site
    (address
      (authority
        (domain_name
          (literal_string)
          (literal_string))))
    (statement
      (directive
        (identifier))
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string)))))
    (statement
      (directive
        (identifier))
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string))
          (integer))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string))
          (integer))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string))
          (integer))))
    (statement
      (directive
        (identifier))
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)
            (literal_string)))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)
            (literal_string)
            (literal_string)))))))

================
File Descriptors
================

example.com

reverse_proxy fdgram/3
reverse_proxy fd/4

---

(caddyfile
  (single_site
    (address
      (authority
        (domain_name
          (literal_string)
          (literal_string))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (authority
          (domain_name
            (literal_string)))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (authority
          (domain_name
            (literal_string)))))))

============
Unix Sockets
============

example.com

reverse_proxy unix//run/grafana/grafana.sock
reverse_proxy unix+h2c//run/grafana/grafana.sock
reverse_proxy unixgram//run/grafana/grafana.sock
reverse_proxy unixpacket//run/grafana/grafana.sock

---

(caddyfile
  (single_site
    (address
      (authority
        (domain_name
          (literal_string)
          (literal_string))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (pathname
          (posix_absolute_pathname
            (literal_string)
            (literal_string)
            (literal_string)
            (literal_string)))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (protocol)
        (pathname
          (posix_absolute_pathname
            (literal_string)
            (literal_string)
            (literal_string)
            (literal_string)))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (pathname
          (posix_absolute_pathname
            (literal_string)
            (literal_string)
            (literal_string)
            (literal_string)))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (pathname
          (posix_absolute_pathname
            (literal_string)
            (literal_string)
            (literal_string)
            (literal_string)))))))

=================
Bare IP Addresses
=================

example.com

reverse_proxy 127.0.0.1
reverse_proxy 127.0.0.1:8080
reverse_proxy [::1]
reverse_proxy [::1]:8080

---

(caddyfile
  (single_site
    (address
      (authority
        (domain_name
          (literal_string)
          (literal_string))))
    (statement
      (directive
        (identifier))
      (ipv4))
    (statement
      (directive
        (identifier))
      (address
        (authority
          (ipv4)
          (integer))))
    (statement
      (directive
        (identifier))
      (address
        (authority
          (ipv6
            (integer)))))
    (statement
      (directive
        (identifier))
      (address
        (authority
          (ipv6
            (integer))
          (integer))))))

=========================
IP Address with Protocol
=========================

example.com

reverse_proxy ip/127.0.0.1
reverse_proxy ip/127.0.0.1:8080
reverse_proxy ip/[::1]
reverse_proxy ip/[::1]:8080
reverse_proxy ip4/127.0.0.1
reverse_proxy ip4/127.0.0.1:8080
reverse_proxy ip6/[::1]
reverse_proxy ip6/[::1]:8080

reverse_proxy tcp/127.0.0.1
reverse_proxy tcp/127.0.0.1:8080
reverse_proxy tcp/[::1]
reverse_proxy tcp/[::1]:8080
reverse_proxy tcp4/127.0.0.1
reverse_proxy tcp4/127.0.0.1:8080
reverse_proxy tcp6/[::1]
reverse_proxy tcp6/[::1]:8080

reverse_proxy udp/127.0.0.1
reverse_proxy udp/127.0.0.1:8080
reverse_proxy udp/[::1]
reverse_proxy udp/[::1]:8080
reverse_proxy udp4/127.0.0.1
reverse_proxy udp4/127.0.0.1:8080
reverse_proxy udp6/[::1]
reverse_proxy udp6/[::1]:8080

---

(caddyfile
  (single_site
    (address
      (authority
        (domain_name
          (literal_string)
          (literal_string))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (authority
          (ipv4))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (authority
          (ipv4)
          (integer))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (authority
          (ipv6
            (integer)))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (authority
          (ipv6
            (integer))
          (integer))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (authority
          (ipv4))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (authority
          (ipv4)
          (integer))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (authority
          (ipv6
            (integer)))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (authority
          (ipv6
            (integer))
          (integer))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (authority
          (ipv4))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (authority
          (ipv4)
          (integer))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (authority
          (ipv6
            (integer)))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (authority
          (ipv6
            (integer))
          (integer))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (authority
          (ipv4))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (authority
          (ipv4)
          (integer))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (authority
          (ipv6
            (integer)))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (authority
          (ipv6
            (integer))
          (integer))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (authority
          (ipv4))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (authority
          (ipv4)
          (integer))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (authority
          (ipv6
            (integer)))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (authority
          (ipv6
            (integer))
          (integer))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (authority
          (ipv4))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (authority
          (ipv4)
          (integer))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (authority
          (ipv6
            (integer)))))
    (statement
      (directive
        (identifier))
      (network_address
        (protocol)
        (authority
          (ipv6
            (integer))
          (integer))))))

=================
URL with Fragment
=================

example.com

redir https://example.com/#/about 302

---

(caddyfile
  (single_site
    (address
      (authority
        (domain_name
          (literal_string)
          (literal_string))))
    (statement
      (directive
        (identifier))
      (address
        (literal_string)
        (authority
          (domain_name
            (literal_string)
            (literal_string)))
        (path)
        (literal_string))
      (integer))))

==============================
Single Site Block with Comment
==============================

example.com

#redir https://example.com/#/about 302

---

(caddyfile
  (single_site
    (address
      (authority
        (domain_name
          (literal_string)
          (literal_string))))
    (comment
      (comment))))

=================================
Multiple Site Blocks with Comment
=================================

example.com {
	#respond "Hello, world!"
}

foobar.com {
	#respond "Hello, world!"
}

# foobar.com {
#	respond "Hello, world!"
# }

---

(caddyfile
  (multi_site
    (site_definition
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string))))
      (block
        (comment
          (comment))))
    (site_definition
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string))))
      (block
        (comment
          (comment))))
    (comment
      (comment))
    (comment
      (comment))
    (comment
      (comment))))

=====================
Single-site with Root
=====================

example.com

root * /var/www/

---

(caddyfile
  (single_site
    (address
      (authority
        (domain_name
          (literal_string)
          (literal_string))))
    (statement
      (conditional_directive
        (directive
          (identifier))
        (matcher
          (wildcard)))
      (pathname
        (posix_absolute_pathname
          (literal_string)
          (literal_string))))))

===========================================
Single-site with Multiple Wildcard Matchers
===========================================

example.com

path *.txt *.md *.mdown /site/*

---

(caddyfile
  (single_site
    (address
      (authority
        (domain_name
          (literal_string)
          (literal_string))))
    (statement
      (directive
        (identifier))
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string))))
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string))))
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string))))
      (pathname
        (posix_absolute_pathname
          (literal_string)
          (literal_string))))))

========
Duration
========

example.com

respond 5s

---

(caddyfile
  (single_site
    (address
      (authority
        (domain_name
          (literal_string)
          (literal_string))))
    (statement
      (directive
        (identifier))
      (amount
        (integer)
        (duration)))))

====================
Environment Variable
====================

example.com

root * {$ROOT}

---

(caddyfile
  (single_site
    (address
      (authority
        (domain_name
          (literal_string)
          (literal_string))))
    (statement
      (conditional_directive
        (directive
          (identifier))
        (matcher
          (wildcard)))
      (templated_string
        (substitution
          (environment_variable
            (identifier)))))))

=======================================
Environment Variable with Default Value
=======================================

example.com

root * {$ROOT:/var/www}

---

(caddyfile
  (single_site
    (address
      (authority
        (domain_name
          (literal_string)
          (literal_string))))
    (statement
      (conditional_directive
        (directive
          (identifier))
        (matcher
          (wildcard)))
      (templated_string
        (substitution
          (environment_variable
            (identifier)
            (pathname
              (posix_absolute_pathname
                (literal_string)
                (literal_string)))))))))

===================
Single-site Heredoc
===================

example.com

respond <<EOF
Hello, world
EOF

---

(caddyfile
  (single_site
    site: (address
      (authority
        host: (domain_name
          segment: (literal_string)
          segment: (literal_string))))
    (statement
      (directive
        name: (identifier))
      argument: (heredoc
        (heredoc_tag)
        (heredoc_content)
        (heredoc_suffix)))))

=====================
Heredoc in Site-block
=====================

example.com {
	respond <<EOF
		Hello, world
EOF 200
}

---

(caddyfile
  (multi_site
    (site_definition
      site: (address
        (authority
          host: (domain_name
            segment: (literal_string)
            segment: (literal_string))))
      (block
        (statement
          (directive
            name: (identifier))
          argument: (heredoc
            (heredoc_tag)
            (heredoc_content)
            (heredoc_suffix))
          argument: (integer))))))

==============================
Heredoc in Site-block Indented
==============================

example.com {
	respond <<EOF
		Hello, world
	EOF 200
}

---

(caddyfile
  (multi_site
    (site_definition
      site: (address
        (authority
          host: (domain_name
            segment: (literal_string)
            segment: (literal_string))))
      (block
        (statement
          (directive
            name: (identifier))
          argument: (heredoc
            (heredoc_tag)
            (heredoc_content)
            (heredoc_suffix))
          argument: (integer))))))

================
Wildcard Matcher
================

example.com

reverse_proxy * 127.0.0.1

---

(caddyfile
  (single_site
    site: (address
      (authority
        host: (domain_name
          segment: (literal_string)
          segment: (literal_string))))
    (statement
      (conditional_directive
        (directive
          name: (identifier))
        matcher: (matcher
          (wildcard)))
      argument: (ipv4))))

============
Path Matcher
============

example.com

reverse_proxy /path 127.0.0.1

---

(caddyfile
  (single_site
    site: (address
      (authority
        host: (domain_name
          segment: (literal_string)
          segment: (literal_string))))
    (statement
      (conditional_directive
        (directive
          name: (identifier))
        matcher: (matcher
          (path
            segment: (literal_string))))
      argument: (ipv4))))

=====================
Wildcard Path Matcher
=====================

example.com

reverse_proxy /path* 127.0.0.1

---

(caddyfile
  (single_site
    site: (address
      (authority
        host: (domain_name
          segment: (literal_string)
          segment: (literal_string))))
    (statement
      (conditional_directive
        (directive
          name: (identifier))
        matcher: (matcher
          (path
            segment: (literal_string))))
      argument: (ipv4))))

=============
Named Matcher
=============

*.example.com

@test host test.example.com

reverse_proxy @test 127.0.0.1

---

(caddyfile
  (single_site
    site: (address
      (authority
        host: (domain_name
          segment: (literal_string)
          segment: (literal_string)
          segment: (literal_string))))
    (named_matcher_definition
      name: (identifier)
      (request_matcher
        matcher: (identifier)
        argument: (address
          (authority
            host: (domain_name
              segment: (literal_string)
              segment: (literal_string)
              segment: (literal_string))))))
    (statement
      (conditional_directive
        (directive
          name: (identifier))
        matcher: (matcher
          (named_matcher_reference
            name: (identifier))))
      argument: (ipv4))))

===================
Named Matcher Block
===================

*.example.com

@test {
	host test.example.com
}

reverse_proxy @test 127.0.0.1

---

(caddyfile
  (single_site
    site: (address
      (authority
        host: (domain_name
          segment: (literal_string)
          segment: (literal_string)
          segment: (literal_string))))
    (named_matcher_definition
      name: (identifier)
      (request_matcher
        (block
          (request_matcher
            matcher: (identifier)
            argument: (address
              (authority
                host: (domain_name
                  segment: (literal_string)
                  segment: (literal_string)
                  segment: (literal_string))))))))
    (statement
      (conditional_directive
        (directive
          name: (identifier))
        matcher: (matcher
          (named_matcher_reference
            name: (identifier))))
      argument: (ipv4))))

===========
Not Matcher
===========

*.example.com

@test not host test.example.com

reverse_proxy @test 127.0.0.1

---

(caddyfile
  (single_site
    site: (address
      (authority
        host: (domain_name
          segment: (literal_string)
          segment: (literal_string)
          segment: (literal_string))))
    (named_matcher_definition
      name: (identifier)
      (request_matcher
        modifier: (not_operator)
        matcher: (identifier)
        argument: (address
          (authority
            host: (domain_name
              segment: (literal_string)
              segment: (literal_string)
              segment: (literal_string))))))
    (statement
      (conditional_directive
        (directive
          name: (identifier))
        matcher: (matcher
          (named_matcher_reference
            name: (identifier))))
      argument: (ipv4))))

===========
CEL Matcher
===========

*.example.com

@test `{method}.startsWith("P")`
@test2 expression `{method}.startsWith("P")`
@test3 expression {method}.startsWith("P")

reverse_proxy @test 127.0.0.1

---

(caddyfile
  (single_site
    site: (address
      (authority
        host: (domain_name
          segment: (literal_string)
          segment: (literal_string)
          segment: (literal_string))))
    (named_matcher_definition
      name: (identifier)
      (request_matcher
        (embedded_content
          (cel_expression))))
    (named_matcher_definition
      name: (identifier)
      (request_matcher
        matcher: (identifier)
        argument: (embedded_content
          (cel_expression))))
    (named_matcher_definition
      name: (identifier)
      (request_matcher
        matcher: (identifier)
        argument: (cel_expression)))
    (statement
      (conditional_directive
        (directive
          name: (identifier))
        matcher: (matcher
          (named_matcher_reference
            name: (identifier))))
      argument: (ipv4))))

=========================================
Matcher Directive with Multiple Arguments
=========================================

example.com

@private client_ip 192.168.0.0/16 172.16.0.0/12 10.0.0.0/8 127.0.0.1/8 fd00::/8 ::1

reverse_proxy @private 127.0.0.1

---

(caddyfile
  (single_site
    site: (address
      (authority
        host: (domain_name
          segment: (literal_string)
          segment: (literal_string))))
    (named_matcher_definition
      name: (identifier)
      (request_matcher
        matcher: (identifier)
        argument: (cidr
          (ipv4)
          (integer))
        argument: (cidr
          (ipv4)
          (integer))
        argument: (cidr
          (ipv4)
          (integer))
        argument: (cidr
          (ipv4)
          (integer))
        argument: (address
          (authority
            host: (domain_name
              segment: (literal_string)))
          path: (path
            segment: (literal_string)))
        argument: (address
          (authority
            port: (integer)))))
    (statement
      (conditional_directive
        (directive
          name: (identifier))
        matcher: (matcher
          (named_matcher_reference
            name: (identifier))))
      argument: (ipv4))))

========================
path_regexp with Regex
========================

example.com

@bar path_regexp /foo/(bar|baz).*
@numeric path_regexp /foo/[0-9]+
@regex path_regexp ^/path/([a-z]+)/end$
@static path_regexp \.([a-f0-9]{6})\.(css|js)$
@static_cel `path_regexp('\.([a-f0-9]{6})\.(css|js)$') && file()`

file_server

---

(caddyfile
  (single_site
    site: (address
      (authority
        host: (domain_name
          segment: (literal_string)
          segment: (literal_string))))
    (named_matcher_definition
      name: (identifier)
      (request_matcher
        matcher: (identifier)
        argument: (regular_expression)))
    (named_matcher_definition
      name: (identifier)
      (request_matcher
        matcher: (identifier)
        argument: (regular_expression)))
    (named_matcher_definition
      name: (identifier)
      (request_matcher
        matcher: (identifier)
        argument: (regular_expression)))
    (named_matcher_definition
      name: (identifier)
      (request_matcher
        matcher: (identifier)
        argument: (regular_expression)))
    (named_matcher_definition
      name: (identifier)
      (request_matcher
        (embedded_content
          (cel_expression))))
    (statement
      (directive
        name: (identifier)))))

===========
Named Route
===========

&(named_route) {
	# this is a re-usable named route
}

---

(caddyfile
  (multi_site
    (named_route_definition
      (named_route_declaration
        (identifier))
      (block
        (comment
          (comment))))))

===============================
Named Route between Site blocks
===============================

example.com {
	invoke snippet
}

&(named_route) {
	# this is a re-usable named route
}

example.net {
	invoke snippet
}

---

(caddyfile
  (multi_site
    (site_definition
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string))))
      (block
        (invoke_statement
          (identifier))))
    (named_route_definition
      (named_route_declaration
        (identifier))
      (block
        (comment
          (comment))))
    (site_definition
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string))))
      (block
        (invoke_statement
          (identifier))))))

=================
Array Placeholder
=================

example.com

root * {args[0]}

---

(caddyfile
  (single_site
    (address
      (authority
        (domain_name
          (literal_string)
          (literal_string))))
    (statement
      (conditional_directive
        (directive
          (identifier))
        (matcher
          (wildcard)))
      (templated_string
        (substitution
          (index_expression
            (identifier)
            (integer)))))))

========================
Nested Field Placeholder
========================

example.com

root * {something.args[0]}

---

(caddyfile
  (single_site
    (address
      (authority
        (domain_name
          (literal_string)
          (literal_string))))
    (statement
      (conditional_directive
        (directive
          (identifier))
        (matcher
          (wildcard)))
      (templated_string
        (substitution
          (generic_placeholder
            (namespace_expression
              (identifier)
              (identifier))))))))

=====================================================
Field Placeholder with nested Environment Placeholder
=====================================================

example.com

dns cloudflare {file.{$CF_API_TOKEN_FILE}}

---

(caddyfile
  (single_site
    (address
      (authority
        (domain_name
          (literal_string)
          (literal_string))))
    (statement
      (directive
        (identifier))
      (literal_string)
      (templated_string
        (substitution
          (file_placeholder
            (generic_pathname
              (templated_string
                (substitution
                  (environment_variable
                    (identifier)))))))))))

==================================
Single Site Block with one address
==================================

example.com

root * /var/www

---

(caddyfile
  (single_site
    (address
      (authority
        (domain_name
          (literal_string)
          (literal_string))))
    (statement
      (conditional_directive
        (directive
          (identifier))
        (matcher
          (wildcard)))
      (pathname
        (posix_absolute_pathname
          (literal_string)
          (literal_string))))))

=========================================
Single Site Block with multiple addresses
=========================================

http://example.com:8080, https://fake.org:8443, fake.co.uk, {$ENV_SITE}, :{$PORT}, {$DOMAIN}:443

---

(caddyfile
  (single_site
    (address
      (literal_string)
      (authority
        (domain_name
          (literal_string)
          (literal_string))
        (integer)))
    (address
      (literal_string)
      (authority
        (domain_name
          (literal_string)
          (literal_string))
        (integer)))
    (address
      (authority
        (domain_name
          (literal_string)
          (literal_string)
          (literal_string))))
    (address
      (authority
        (domain_name
          (templated_string
            (substitution
              (environment_variable
                (identifier)))))))
    (address
      (authority
        (templated_string
          (substitution
            (environment_variable
              (identifier))))))
    (address
      (authority
        (domain_name
          (templated_string
            (substitution
              (environment_variable
                (identifier)))))
        (integer)))))

=====================================
Single Site Block with Global Options
=====================================

{
	hello
}

example.com

root * /var/www

---

(caddyfile
  (global_options
    (statement
      (directive
        (identifier))))
  (single_site
    (address
      (authority
        (domain_name
          (literal_string)
          (literal_string))))
    (statement
      (conditional_directive
        (directive
          (identifier))
        (matcher
          (wildcard)))
      (pathname
        (posix_absolute_pathname
          (literal_string)
          (literal_string))))))

=================
Single Site Block
=================

example.com {
	respond "Hello, world!"
}

---

(caddyfile
  (multi_site
    (site_definition
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string))))
      (block
        (statement
          (directive
            (identifier))
          (quoted_expression
            (literal_string)))))))

====================
Multiple Site Blocks
====================

example.com {
	respond "Hello, world!"
}

foobar.com {
	respond "Hello, world!"
}

---

(caddyfile
  (multi_site
    (site_definition
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string))))
      (block
        (statement
          (directive
            (identifier))
          (quoted_expression
            (literal_string)))))
    (site_definition
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string))))
      (block
        (statement
          (directive
            (identifier))
          (quoted_expression
            (literal_string)))))))

=======
Snippet
=======

(snippet) {
	# this is a reusable snippet
}

---

(caddyfile
  (multi_site
    (snippet_definition
      (snippet_declaration
        (identifier))
      (block
        (comment
          (comment))))))

===========================
Snippet between Site blocks
===========================

example.com {
	import snippet
}

(snippet) {
	# this is a reusable snippet
}

example.net {
	import snippet
}

---

(caddyfile
  (multi_site
    (site_definition
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string))))
      (block
        (import_statement
          (identifier))))
    (snippet_definition
      (snippet_declaration
        (identifier))
      (block
        (comment
          (comment))))
    (site_definition
      (address
        (authority
          (domain_name
            (literal_string)
            (literal_string))))
      (block
        (import_statement
          (identifier))))))

=====================
Nested Global Options
=====================
